--- a/booking/src/AppBundle/Resources/views/Security/login.html.twig
+++ b/booking/src/AppBundle/Resources/views/Security/login.html.twig
@@ -12,6 +12,8 @@
         <label for="password">Password:</label>
         <input type="password" id="password" name="_password" />
 
+        <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}" />
+
         <input type="submit" value="Login" />
     </form>
 {% endblock content %}
